ReadingCustomXMLTest added to NeXML test classes.